--- a/Agda.cabal
+++ b/Agda.cabal
@@ -116,8 +116,8 @@ library
   if os(windows)
     build-depends:  Win32 >= 2.2 && < 2.6
 
-  build-depends:  async >= 2.0.2 && < 2.2
-                , array >= 0.5.0.0 && < 0.6
+  build-depends:  array >= 0.5.0.0 && < 0.6
+                , async >= 2.0.2 && < 2.2
                 , base >= 4.7.0.2 && < 4.11
                 , binary >= 0.7.2.1 && < 0.9
                 , boxes >= 0.1.3 && < 0.2
