[ warnings ] store printed warning message instead of state + environment
In particular, we do not need to serialise metas anymore.

Might help with #2592 and #2657.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -420,6 +420,7 @@ library
                     Agda.TypeChecking.SyntacticEquality
                     Agda.TypeChecking.Telescope
                     Agda.TypeChecking.Unquote
+                    Agda.TypeChecking.Warnings
                     Agda.TypeChecking.With
                     Agda.Utils.AssocList
                     Agda.Utils.Bag
