--- a/Agda.cabal
+++ b/Agda.cabal
@@ -627,7 +627,8 @@ test-suite agda-tests
                     , UserManual.Tests
                     , Utils
 
-  build-depends:  array >= 0.5.0.0 && < 0.6
+  build-depends:  Agda
+                , array >= 0.5.0.0 && < 0.6
                 , base >= 4.7.0.2 && < 4.11
                 , bytestring >= 0.10.4.0 && < 0.11
                 , containers >= 0.5.5.1 && < 0.6
