[ travis ] Added documentation about the options to `cabal install`.
[ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -218,6 +218,8 @@ install:
 
 # N.B. that we use the `--force-reinstalls` option [Issue 1520].
 
+# We are using `make CABAL_OPTS...` because we are including the
+# options to `cabal install` set up in the `Makefile`.
   - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" ]]; then
        make CABAL_OPTS='--only-dependencies --force-reinstalls' install-bin;
     elif [[ $TEST = "STACKAGE" ]]; then
