--- a/Agda.cabal
+++ b/Agda.cabal
@@ -151,6 +151,7 @@ library
                 -- mtl >= 2.2 && < 2.2.1 doesn't export Control.Monad.Except.
                 , mtl >= 2.2.1 && < 2.3
                 , murmur-hash >= 0.1 && < 0.2
+                , uri-encode >= 1.5.0.5 && < 1.6
                 , parallel >= 3.2.0.4 && < 3.3
                 -- pretty 1.1.1.2 and 1.1.1.3 do not follow the
                 -- package versioning policy.
