--- a/Agda.cabal
+++ b/Agda.cabal
@@ -644,6 +644,7 @@ test-suite agda-tests
                 , temporary >= 1.2.0.3 && < 1.3
                 , text >= 0.11.3.1 && < 1.3
                 , unix-compat >= 0.4.3.1 && < 0.5
+                , uri-encode >= 1.5.0.5 && < 1.6
 
   ghc-options:      -threaded
                     -Wall
