--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,6 @@ matrix:
             - alex-3.1.7
             - cabal-install-2.0
             - ghc-8.2.1
-            - happy-1.19.5
             - texlive-binaries
           sources:
             - hvr-ghc
@@ -58,7 +57,6 @@ matrix:
             - alex-3.1.7
             - cabal-install-1.24
             - ghc-8.0.2
-            - happy-1.19.5
             - texlive-binaries
           sources:
             - hvr-ghc
@@ -70,7 +68,6 @@ matrix:
             - alex-3.1.7
             - cabal-install-1.22
             - ghc-7.10.3
-            - happy-1.19.5
             - texlive-binaries
           sources:
             - hvr-ghc
@@ -82,7 +79,6 @@ matrix:
             - alex-3.1.7
             - cabal-install-1.18
             - ghc-7.8.4
-            - happy-1.19.5
             - texlive-binaries
           sources:
             - hvr-ghc
@@ -120,7 +116,6 @@ matrix:
             - alex-3.1.7
             - cabal-install-2.0
             - ghc-8.2.1
-            - happy-1.19.5
           sources:
             - hvr-ghc
 
@@ -146,7 +141,7 @@ matrix:
 before_install:
 
   - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" ]]; then
-       export PATH=/opt/ghc/$GHC_VER/bin:/opt/cabal/$CABAL_VER/bin:/opt/alex/3.1.7/bin:/opt/happy/1.19.5/bin:$PATH;
+       export PATH=/opt/ghc/$GHC_VER/bin:/opt/cabal/$CABAL_VER/bin:/opt/alex/3.1.7/bin:$PATH;
     elif [[ $TEST = "STACKAGE" ]]; then
          export PATH=/opt/ghc/$GHC_VER/bin:$PATH;
     fi
@@ -191,8 +186,9 @@ install:
        export PATH=$HOME/.cabal/bin:$PATH &&
        cabal --version &&
        travis_retry cabal update &&
-       travis_retry cabal fetch cpphs-1.20.8 &&
-       cabal install cpphs-1.20.8 &&
+       travis_retry cabal fetch happy cpphs-1.20.8 &&
+       cabal install happy cpphs-1.20.8 &&
+       happy --version &&
        cpphs --version;
     fi
 
