--- a/Agda.cabal
+++ b/Agda.cabal
@@ -188,9 +188,11 @@ library
     build-depends:  fail == 4.9.*
                   , semigroups == 0.18.*
 
-  -- Agda doesn't build with Alex 3.2.0.
-  build-tools:  alex >= 3.1.0 && < 3.2.0 || >= 3.2.1 && < 3.3
-              , happy >= 1.19.4 && < 2
+  -- We don't write upper bounds for Alex nor Happy because the
+  -- `build-tools` field can not be modified in Hackage. Agda doesn't
+  -- build with Alex 3.2.0.
+  build-tools:  alex >= 3.1.0 && < 3.2.0 || >= 3.2.1
+              , happy >= 1.19.4
 
   exposed-modules:  Agda.Auto.Auto
                     Agda.Auto.Options
