[ 2.5.3 release, #2659 ] Restored version to 2.5.3.
This reverts commit 4828e04382bad37afacae362e991597dddb2599b.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.5.2.20170816
+version:         2.5.3
 cabal-version:   >= 1.10
 build-type:      Custom
 license:         OtherLicense
