Revert "[ #2745] Relaxed upper bound version for hashtables."
This reverts commit e8af24a3f64a3cf3a6900e663744525c2726bf30.

--- a/stack-8.0.2.yaml
+++ b/stack-8.0.2.yaml
@@ -3,3 +3,6 @@ resolver: lts-9.4
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+
+extra-deps:
+- hashtables-1.2.1.1
