--- a/Agda.cabal
+++ b/Agda.cabal
@@ -130,7 +130,7 @@ library
     build-depends:  Win32 >= 2.2 && < 2.4
 
   build-depends:  array >= 0.4.0.1 && < 0.6
-                , base >= 4.6.0.1 && < 4.10
+                , base >= 4.6.0.1 && < 4.11
                 , binary >= 0.7.2.1 && < 0.9
                 , boxes >= 0.1.3 && < 0.2
                 , bytestring >= 0.10.0.2 && < 0.11
@@ -155,7 +155,7 @@ library
                 -- some cases.
                 , hashtables >= 1.0.1.8 && < 1.2 || >= 1.2.0.2 && < 1.3
                 , haskeline >= 0.7.1.3 && < 0.8
-                , ieee754 >= 0.7.8 && < 0.8
+                , ieee754 >= 0.7.8 && < 0.9
                 , monadplus >= 1.4 && < 1.5
                 -- mtl-2.1 contains a severe bug.
                 --
@@ -166,12 +166,12 @@ library
                 -- pretty 1.1.1.2 and 1.1.1.3 do not follow the
                 -- package versioning policy.
                 , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
-                , process >= 1.1.0.2 && < 1.5
+                , process >= 1.1.0.2 && < 1.7
                 , regex-tdfa >= 1.2.2 && < 1.3
                 , strict >= 0.3.2 && < 0.4
-                , template-haskell >= 2.8.0.0 && < 2.12
+                , template-haskell >= 2.9.0.0 && < 2.13
                 , text >= 0.11.3.1 && < 1.3
-                , time >= 1.4.0.1 && < 1.7
+                , time >= 1.4.0.1 && < 1.9
                 -- transformers 0.4.0.0 was deprecated.
                 , transformers >= 0.3 && < 0.4 || >= 0.4.1.0 && < 0.6
                 , transformers-compat >= 0.3.3.3 && < 0.6
@@ -506,7 +506,7 @@ library
 
   -- Initially, we disable all the warnings.
   ghc-options: -w
-               -Werror
+      --         -Werror
 
   -- This option must be the first one after disabling the warnings. See
   -- Issue #2094.
@@ -608,10 +608,10 @@ executable agda-mode
   hs-source-dirs:   src/agda-mode
   main-is:          Main.hs
   other-modules:    Paths_Agda
-  build-depends:    base >= 4.6.0.1 && < 4.10
+  build-depends:    base >= 4.6.0.1 && < 4.11
                   , directory >= 1.2.0.1 && < 1.4
                   , filepath >= 1.3.0.1 && < 1.5
-                  , process >= 1.1.0.2 && < 1.5
+                  , process >= 1.1.0.2 && < 1.7
   default-language: Haskell2010
 
 -- Cabal testsuite integration has some serious bugs, but we
@@ -637,14 +637,14 @@ test-suite agda-tests
                     , Utils
 
   build-depends:  array >= 0.4.0.1 && < 0.6
-                , base >= 4.6.0.1 && < 4.10
+                , base >= 4.6.0.1 && < 4.11
                 , bytestring >= 0.10.0.2 && < 0.11
                 , containers >= 0.5.0.0 && < 0.6
                 , directory >= 1.2.0.1 && < 1.4
                 , filepath >= 1.3.0.1 && < 1.5
                 , filemanip >= 0.3.6.3 && < 0.4
-                , process >= 1.1.0.2 && < 1.5
-                , process-extras >= 0.3.0 && < 0.3.4 || >= 0.4.1.2 && < 0.5
+                , process >= 1.1.0.2 && < 1.7
+                , process-extras >= 0.3.0 && < 0.3.4 || >= 0.4.1.2 && < 0.8
                 , regex-tdfa >= 1.2.0 && < 1.3
                 , regex-tdfa-text >= 1.0.0.3 && < 1.1
                 , tasty >= 0.10 && < 0.12
@@ -723,7 +723,7 @@ test-suite internal-tests
 
   build-depends:  Agda == 2.6.0
                 , array >= 0.4.0.1 && < 0.6
-                , base >= 4.6.0.1 && < 4.10
+                , base >= 4.6.0.1 && < 4.11
                 , containers >= 0.5.0.0 && < 0.6
                 , filepath >= 1.3.0.1 && < 1.5
                 -- mtl-2.1 contains a severe bug.
@@ -732,7 +732,7 @@ test-suite internal-tests
                 , mtl >= 2.1.1 && <= 2.1.3.1 || >= 2.2.1 && < 2.3
                 -- QuickCheck 2.8.2 is required by the current
                 -- Stackage LTS (7.13).
-                , QuickCheck >= 2.8.2 && < 2.10
+                , QuickCheck >= 2.8.2 && < 2.11
                 , text >= 0.11.3.1 && < 1.3
                 -- transformers 0.4.0.0 was deprecated.
                 , transformers >= 0.3 && < 0.4 || >= 0.4.1.0 && < 0.6
