[ new ] added Agda.Utils.NonemptyList

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -465,6 +465,7 @@ library
                     Agda.Utils.Memo
                     Agda.Utils.Monad
                     Agda.Utils.Monoid
+                    Agda.Utils.NonemptyList
                     Agda.Utils.Null
                     Agda.Utils.Parser.MemoisedCPS
                     Agda.Utils.Parser.ReadP
