--- a/Agda.cabal
+++ b/Agda.cabal
@@ -473,6 +473,7 @@ library
                     Agda.Utils.PartialOrd
                     Agda.Utils.Permutation
                     Agda.Utils.Pointer
+                    Agda.Utils.POMonoid
                     Agda.Utils.Pretty
                     Agda.Utils.SemiRing
                     Agda.Utils.Singleton
