--- a/Agda.cabal
+++ b/Agda.cabal
@@ -121,11 +121,11 @@ library
     , containers >= 0.5.0.0 && < 0.6
     , data-hash >= 0.2.0.0 && < 0.3
     , deepseq >= 1.3.0.1 && < 1.5
-    , directory >= 1.2.0.1 && < 1.3
+    , directory >= 1.2.0.1 && < 1.4
     -- Edison versioning scheme: http://rwd.rdockins.name/edison/home/.
     -- EdisonAPI isn't used by Agda, but EdisonCore 1.3.1 doesn't
     -- declare what version of EdisonAPI it depends on.
-    , EdisonAPI == 1.3
+    -- , EdisonAPI >= 1.3 && < 1.4
     , EdisonCore >= 1.3.1.1 && < 1.3.2
     , edit-distance >= 0.2.1.2 && < 0.3
     , equivalence >= 0.2.5 && < 0.4
@@ -141,13 +141,13 @@ library
     -- much slower (infinitely slower?) in some cases.
     , hashtables >= 1.0.1.8 && < 1.2 || >= 1.2.0.2 && < 1.3
     , haskeline >= 0.7.1.3 && < 0.8
-    , haskell-src-exts >= 1.16.0.1 && < 1.18
+    , haskell-src-exts >= 1.16.0.1 && < 1.20
     , monadplus >= 1.4 && < 1.5
     -- mtl-2.1 contains a severe bug.
     --
     -- mtl >= 2.2 && < 2.2.1 doesn't export Control.Monad.Except.
     , mtl >= 2.1.1 && <= 2.1.3.1 || >= 2.2.1 && < 2.3
-    , QuickCheck >= 2.8.2 && < 2.9
+    , QuickCheck >= 2.8.2 && < 2.11
     , parallel >= 3.2.0.4 && < 3.3
     -- pretty 1.1.1.2 and 1.1.1.3 do not follow the package versioning
     -- policy.
@@ -574,4 +574,3 @@ executable agda-ghc-names
     , mtl >= 2.1.1 && <= 2.1.3.1 || >= 2.2.1 && < 2.3
     , filepath >= 1.3.0.1 && < 1.5
   ghc-options:  -rtsopts
-
