Refactor for #2822: Parse ellipsis as pattern.
This is in preparation to later allow  (... | wps) ps

Since patterns are parsed as expressions first, we also have to add the
ellipsis to expressions.  This gives additional shift/reduce conflicts
originating from

  open M {{...}}

but it seems that the conflicts are resolved by the standard strategy
(prefer shift over reduce).

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -275,6 +275,7 @@ library
                     Agda.Syntax.Concrete.Operators.Parser
                     Agda.Syntax.Concrete.Operators.Parser.Monad
                     Agda.Syntax.Concrete.Operators
+                    Agda.Syntax.Concrete.Pattern
                     Agda.Syntax.Concrete.Pretty
                     Agda.Syntax.Concrete
                     Agda.Syntax.DoNotation
