--- a/src/size-solver/size-solver.cabal
+++ b/src/size-solver/size-solver.cabal
@@ -12,9 +12,10 @@ category:        Sized types
 synopsis:        A solver for size constraints arising in sized types.
 description:
   See Felix Reihl, 2013, Bachelor thesis, Ludwig-Maximilians-University.
--- tested-with:        GHC == 7.6.3
---                     GHC == 7.8.4
---                     GHC == 7.10.3
+tested-with: GHC == 7.10.3
+             GHC == 8.0.2
+             GHC == 8.2.1
+
 -- extra-source-files: src/full/undefined.h
 --                     README.md
 --                     CHANGELOG
@@ -33,7 +34,7 @@ executable size-solver
   main-is:        Main.hs
   build-depends:
     Agda == 2.5.4
-    , base >= 4.7.0.2 && < 6
-    , containers >= 0.5.5.1 && < 0.6
-    , mtl >= 2.1.1 && <= 2.1.3.1 || >= 2.2.1 && < 2.3
+    , base >= 4.8.2.0 && < 6
+    , containers >= 0.5.6.2 && < 0.6
+    , mtl >= 2.2.1 && < 2.3
     , parsec >= 3.1 && < 3.2
