--- a/Agda.cabal
+++ b/Agda.cabal
@@ -443,6 +443,7 @@ library
                     Agda.Utils.Haskell.Syntax
                     Agda.Utils.Impossible
                     Agda.Utils.IndexedList
+                    Agda.Utils.IntSet.Infinite
                     Agda.Utils.IO
                     Agda.Utils.IO.Binary
                     Agda.Utils.IO.Directory
