--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.6.0
+version:         2.6.0.1
 cabal-version:   >= 1.10
 build-type:      Custom
 license:         OtherLicense
@@ -591,7 +591,7 @@ library
 executable agda
   hs-source-dirs: src/main
   main-is:        Main.hs
-  build-depends:  Agda == 2.6.0
+  build-depends:  Agda == 2.6.0.1
                   -- Nothing is used from the following package,
                   -- except for the prelude.
                 , base >= 4.6.0.1 && < 6
@@ -664,7 +664,7 @@ test-suite agda-tests
                     -Wall
                     -fwarn-identities
                     -fno-warn-unused-imports
-                    -Werror
+               --     -Werror
 
   if impl(ghc < 8.0)
     ghc-options: -fwarn-missing-local-sigs
@@ -721,7 +721,7 @@ test-suite internal-tests
                 , InternalTests.Utils.Trie
                 , InternalTests.Utils.Warshall
 
-  build-depends:  Agda == 2.6.0
+  build-depends:  Agda == 2.6.0.1
                 , array >= 0.4.0.1 && < 0.6
                 , base >= 4.6.0.1 && < 4.11
                 , containers >= 0.5.0.0 && < 0.6
@@ -761,7 +761,7 @@ test-suite internal-tests
 
   -- Initially, we disable all the warnings.
   ghc-options: -w
-               -Werror
+        --       -Werror
 
   -- This option must be the first one after disabling the warnings. See
   -- Issue #2094.
