[ ghc-backend ] complete rewrite of unsafeCoerce insertion
Now operates on treeless before translation to Haskell. Defined
in `Agda.Compiler.MAlonzo.Coerce`.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -203,6 +203,7 @@ library
                     Agda.Compiler.JS.Syntax
                     Agda.Compiler.JS.Substitution
                     Agda.Compiler.JS.Pretty
+                    Agda.Compiler.MAlonzo.Coerce
                     Agda.Compiler.MAlonzo.Compiler
                     Agda.Compiler.MAlonzo.Encode
                     Agda.Compiler.MAlonzo.HaskellTypes
