[ #2749 ] fix dbraces, handle indices
* Add an extra space around the unicode double-brace symbol.
* Add a test case for double braces (duplicate the test: one for
  ascii and one for unicode)

* Split off the IORef definition in Agda.Interaction.Options.IORef
  to break the dependency cycle between Agda.Interaction.Options
  and Agda.Utils.String

* Make Agda.Utils.String and Agda.Utils.Suffixes UnicodeOrAscii
  aware.
* Add test cases for suffix recognition and generation in ascii
  and unicode

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -250,6 +250,7 @@ library
                     Agda.Interaction.Library.Base
                     Agda.Interaction.Library.Parse
                     Agda.Interaction.Options
+                    Agda.Interaction.Options.IORefs
                     Agda.Interaction.Options.Lenses
                     Agda.Main
                     Agda.Syntax.Abstract.Copatterns
