--- a/test/interaction/Issue2749-2.in
+++ b/test/interaction/Issue2749-2.in
@@ -3,4 +3,4 @@ goal_command 0 (cmd_intro False) ""
 top_command (showImplicitArgs True)
 goal_command 1 cmd_make_case ""
 top_command (showImplicitArgs False)
-goal_command 2 cmd_make_case "b1"
+goal_command 2 cmd_make_case "b₁"
