--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=STACKAGE GHC_VER=8.0.2 BUILD=STACK ARGS="--stack-yaml stack-8.0.2.yaml --system-ghc" MANUAL_INSTALL_BUILD_TOOLS=NO
+    - env: TEST=STACKAGE GHC_VER=8.0.2 BUILD=STACK ARGS="--stack-yaml stack-8.0.2.yaml --system-ghc"
       addons:
         apt:
           packages:
@@ -77,7 +77,7 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=STACKAGE GHC_VER=7.10.3 BUILD=STACK ARGS="--stack-yaml stack-7.10.3.yaml --system-ghc" MANUAL_INSTALL_BUILD_TOOLS=YES
+    - env: TEST=STACKAGE GHC_VER=7.10.3 BUILD=STACK ARGS="--stack-yaml stack-7.10.3.yaml --system-ghc"
       addons:
         apt:
           packages:
@@ -180,13 +180,6 @@ install:
 
 # TODO (2016-02-21): Split the long lines (`\` doesn't work).
 
-# We have to manually install `alex`, `cpphs` and possibly `happy`
-# for older snapshots because `stack` seems to have trouble installing
-# build tools for those snapshots.  Note that the version of `cpphs`
-# is currently specified in the yaml files.
-#
-# See https://github.com/commercialhaskell/stack/issues/595.
-
 # N.B. that we use the `--force-reinstalls` option [Issue 1520].
 
 # We are using `make CABAL_OPTS...` because we are including the
@@ -195,10 +188,7 @@ install:
        travis_retry cabal fetch `cabal install --dependencies-only --force-reinstalls --dry-run | sed 1,2d | sed "s|(latest[^)]*)||g"` &&
        make CABAL_OPTS='--only-dependencies --force-reinstalls' install-bin;
     elif [[ $TEST = "STACKAGE" ]]; then
-       if [[ $MANUAL_INSTALL_BUILD_TOOLS = "YES" ]]; then
-           stack install $ARGS --no-terminal alex cpphs happy;
-       fi;
-       stack build $ARGS --no-terminal --only-dependencies;
+         stack build $ARGS --no-terminal --only-dependencies;
     fi
 
 ##############################################################################
