--- a/Agda.cabal
+++ b/Agda.cabal
@@ -41,6 +41,7 @@ extra-source-files: CHANGELOG.md
                     src/full/undefined.h
                     stack-7.10.3.yaml
                     stack-8.0.2.yaml
+                    stack-8.2.2.yaml
 
 data-dir:           src/data
 data-files:         Agda.css
