--- a/Agda.cabal
+++ b/Agda.cabal
@@ -38,6 +38,7 @@ tested-with:        GHC == 7.10.3
 
 extra-source-files: CHANGELOG.md
                     README.md
+                    doc/user-manual.pdf
                     src/full/undefined.h
                     stack-7.10.3.yaml
                     stack-8.0.2.yaml
