--- a/Agda.cabal
+++ b/Agda.cabal
@@ -128,7 +128,8 @@ library
                 , data-hash >= 0.2.0.0 && < 0.3
                 , deepseq >= 1.4.1.1 && < 1.5
                 , directory >= 1.2.2.0 && < 1.4
-                , EdisonCore >= 1.3.1.1 && < 1.3.2
+                -- EdisonCore 1.3.2 doesn't compile with GHC 7.10.*.
+                , EdisonCore == 1.3.1.1 || >= 1.3.2.1 && < 1.4
                 , edit-distance >= 0.2.1.2 && < 0.3
                 , equivalence >= 0.3.2 && < 0.4
                 , filepath >= 1.4.0.0 && < 1.5
