--- a/.travis.yml
+++ b/.travis.yml
@@ -362,7 +362,7 @@ script:
     fi
 
   - if [[ $TEST = "MAIN" ]]; then
-       cabal install -v0 shelltestrunner &&
+       cabal install -v0 --ghc-option=-w shelltestrunner &&
        make test-size-solver;
     fi
 
