--- a/.travis.yml
+++ b/.travis.yml
@@ -386,7 +386,8 @@ script:
 
   - if [[ $TEST = "USER_MANUAL" ]]; then
        make user-manual-html &&
-       make user-manual-pdf ;
+       make user-manual-pdf &&
+       make user-manual-linkcheck ;
     fi
 
 ##############################################################################
