[ #2912 ] (en/dis)abling specific warnings
This gives us the infrastructure to (en/dis)able specific warnings
on a one-by-one basis. We can recover the previous behaviour by
defining common sets of warnings.

Still missing: Manual documentation

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -253,8 +253,10 @@ library
                     Agda.Interaction.Library.Base
                     Agda.Interaction.Library.Parse
                     Agda.Interaction.Options
+                    Agda.Interaction.Options.Help
                     Agda.Interaction.Options.IORefs
                     Agda.Interaction.Options.Lenses
+                    Agda.Interaction.Options.Warnings
                     Agda.Main
                     Agda.Syntax.Abstract.Copatterns
                     Agda.Syntax.Abstract.Name
