[ #2957 ] Added support for async 2.2.*.
Dropped support for earlier versions.

--- a/stack-7.10.3.yaml
+++ b/stack-7.10.3.yaml
@@ -4,6 +4,7 @@ extra-deps:
 - STMonadTrans-0.4.3
 - cpphs-1.20.8
 - equivalence-0.3.2
+- async-2.2.1
 
 # Local packages, usually specified by relative directory name
 packages:
