--- a/stack-8.0.2.yaml
+++ b/stack-8.0.2.yaml
@@ -1,5 +1,8 @@
 resolver: lts-9.20
 
+extra-deps:
+- async-2.2.1
+
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
