--- a/Agda.cabal
+++ b/Agda.cabal
@@ -438,6 +438,7 @@ library
                     Agda.Utils.Either
                     Agda.Utils.Favorites
                     Agda.Utils.FileName
+                    Agda.Utils.Float
                     Agda.Utils.Functor
                     Agda.Utils.Function
                     Agda.Utils.Geniplate
