[ #2980 ] travis: attempt to "allow failures" in user-manual test

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,7 @@ matrix:
           sources:
             - hvr-ghc
 
+  allow_failures:
     - env: TEST=USER_MANUAL BUILD=NOTHING
       language: python
       python: "3.4"
