[ #2980 ] travis: attempt 2 to "allow failures" in user-manual test

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,10 @@ matrix:
           sources:
             - hvr-ghc
 
+    - env: TEST=USER_MANUAL BUILD=NOTHING
+      language: python
+      python: "3.4"
+
   allow_failures:
     - env: TEST=USER_MANUAL BUILD=NOTHING
       language: python
