--- a/src/fix-agda-whitespace/fix-agda-whitespace.cabal
+++ b/src/fix-agda-whitespace/fix-agda-whitespace.cabal
@@ -6,6 +6,7 @@ description:     Fixes whitespace issues for Agda sources.
 tested-with:     GHC == 7.10.3
                  GHC == 8.0.2
                  GHC == 8.2.2
+                 GHC == 8.4.1
 
 executable fix-agda-whitespace
   hs-source-dirs:   .
