--- a/src/agda-bisect/agda-bisect.cabal
+++ b/src/agda-bisect/agda-bisect.cabal
@@ -7,6 +7,7 @@ build-type: Simple
 tested-with: GHC == 7.10.3
              GHC == 8.0.2
              GHC == 8.2.2
+             GHC == 8.4.1
 
 executable agda-bisect
   main-is:          Bisect.hs
