--- a/src/hTags/hTags.cabal
+++ b/src/hTags/hTags.cabal
@@ -6,6 +6,7 @@ build-type: Simple
 tested-with: GHC == 7.10.3
              GHC == 8.0.2
              GHC == 8.2.2
+             GHC == 8.4.1
 
 executable hTags
   main-is: Main.hs
