--- a/Agda.cabal
+++ b/Agda.cabal
@@ -357,6 +357,7 @@ library
                     Agda.TypeChecking.Functions
                     Agda.TypeChecking.Implicit
                     Agda.TypeChecking.Injectivity
+                    Agda.TypeChecking.Inlining
                     Agda.TypeChecking.InstanceArguments
                     Agda.TypeChecking.Irrelevance
                     Agda.TypeChecking.Level
