--- a/Agda.cabal
+++ b/Agda.cabal
@@ -44,6 +44,7 @@ extra-source-files: CHANGELOG.md
                     stack-7.10.3.yaml
                     stack-8.0.2.yaml
                     stack-8.2.2.yaml
+                    stack-8.4.1.yaml
 
 data-dir:           src/data
 data-files:         Agda.css
