[ fixed #2855 ] Better way to turn dot patterns into constructor/variable patterns for the purpose of coverage checking

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -386,6 +386,7 @@ library
                     Agda.TypeChecking.Monad.Trace
                     Agda.TypeChecking.Monad
                     Agda.TypeChecking.Patterns.Abstract
+                    Agda.TypeChecking.Patterns.Internal
                     Agda.TypeChecking.Patterns.Match
                     Agda.TypeChecking.Polarity
                     Agda.TypeChecking.Positivity
