--- a/stack-7.10.3.yaml
+++ b/stack-7.10.3.yaml
@@ -5,6 +5,7 @@ extra-deps:
 - cpphs-1.20.8
 - equivalence-0.3.2
 - async-2.2.1
+- gitrev-1.3.1
 
 # Local packages, usually specified by relative directory name
 packages:
