[ #2794 ] Light highlighting as you type.

--- a/test/interaction/Long.in
+++ b/test/interaction/Long.in
@@ -1,3 +1,4 @@
+top_command (cmd_tokenHighlighting currentFile Keep)
 top_command (cmd_load_highlighting_info currentFile)
 top_command (cmd_load currentFile [])
 top_command (cmd_load_highlighting_info currentFile)
