--- a/test/interaction/Long.in
+++ b/test/interaction/Long.in
@@ -1,7 +1,7 @@
-top_command (cmd_tokenHighlighting currentFile Keep)
-top_command (cmd_load_highlighting_info currentFile)
+IOTCM currentFile NonInteractive Indirect (cmd_tokenHighlighting currentFile Keep)
+IOTCM currentFile NonInteractive Indirect (cmd_load_highlighting_info currentFile)
 top_command (cmd_load currentFile [])
-top_command (cmd_load_highlighting_info currentFile)
+IOTCM currentFile NonInteractive Indirect (cmd_load_highlighting_info currentFile)
 top_command (cmd_compile GHC currentFile [])
 -- Note that the previous fail does not unload the file
 top_command cmd_constraints
