--- a/Agda.cabal
+++ b/Agda.cabal
@@ -458,6 +458,7 @@ library
                     Agda.Utils.Function
                     Agda.Utils.Geniplate
                     Agda.Utils.Graph.AdjacencyMap.Unidirectional
+                    Agda.Utils.Graph.TopSort
                     Agda.Utils.Hash
                     Agda.Utils.HashMap
                     Agda.Utils.Haskell.Syntax
