--- a/Agda.cabal
+++ b/Agda.cabal
@@ -80,6 +80,11 @@ source-repository head
   type:     git
   location: https://github.com/agda/agda.git
 
+source-repository this
+  type:     git
+  location: https://github.com/agda/agda.git
+  tag:      v2.5.4
+
 flag cpphs
   default:     True
   manual:      True
